[gd_scene load_steps=3 format=3 uid="uid://qdxxbiulmfd0"]

[ext_resource type="Script" path="res://scripts/dialog_ui.gd" id="1_a6pww"]
[ext_resource type="Theme" uid="uid://b2lur8a4jrpc" path="res://themes/Main_theme.tres" id="2_4ths4"]

[node name="DialogUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a6pww")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.01521, 0.996509)
theme = ExtResource("2_4ths4")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="SpeakerLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
